events page updated for week of 11/7

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 30 October 2016</span>
+                                        <span class="data">Last Updated: 6 November 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -116,40 +116,44 @@
 							 </p>
 							 <ul class="tales-list">
                                 <li>ALL WEEK: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
-								<li><a href="http://uni.edu/ethics/current-events"> 10/31: RCR 5: Exploring Cross-Cultural Ethics in Scholarship, Elm Room, Maucker Union, Monday, October 31, 2016 - 12:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 10/31: UNI Viola Studio Recital, Davis Hall, GBPAC, Monday, October 31, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 10/31: Instrumental Concerto Competition Finals, Great Hall, GBPAC, Monday, October 31, 2016 - 7:30 pm</a></li>
-								<li>11/1: UNI PRSSA hosts Katie Patterson, Room 109, Curris Business Building, Tuesday, November 1, 2016 - 4:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/1: Guest Artist Recital: <q>Spiritual Standards</q> - Markus Burger, piano and Jan von Klewitz, saxophone, Bengtson Auditorium, Russell Hall, Tuesday, November 1, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/1: Faculty Recital: Amanda McCandless, clarinet, Davis Hall, GBPAC, Tuesday, November 1, 2016 - 6:00 pm</a></li>
-								<li>11/1: Spotlight Series: Concert Chorale and UNI Singers, Great Hall, GBPAC, Tuesday, November 1, 2016 - 7:30 pm</li>
-								<li><a href="http://www.uni.edu/provost/diversity"> 11/2: UNI-NCBI Leadership for Diversity and Inclusion Workshop, Room 301, Rod Library, Wednesday, November 2, 2016 -9:00 am to 4:00 pm</a></li>
-								<li>11/2: Fall Graduation Fair, Old Central Ballrooms A and B, Maucker Union, Wednesday, November 2, 2016 -10:00 am to 3:00 pm</li>
-								<li>11/2: Wheaton Wellness Session: Diabetes, Room 009, Gilchrist Hall, Wednesday, November 2, 2016 - 12:00 pm</li>
-								<li>11/2: Diversity Colloquium: Managing Emotions in the Classroom in an Era of Inequality, Room 287, Rod Library, Wednesday, November 2, 2016 - 12:00 pm</li>
-								<li><a href="http://www.uni.edu/teachered/teacher-education-induction-ceremony-convocation"> 11/2: UNI Teacher Education Induction Convocation, Great Hall, GBPAC, Wednesday, November 2, 2016 - 4:00 pm</a></li>
-								<li>11/2: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, November 2, 2016 - 5:00 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/2: Guest Artist Recital: Anibal dos Santos, viola, Davis Hall, GBPAC, Wednesday, November 2, 2016 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/ietti/wayup/"> 11/3: The Way Up Conference - 30th Anniversary, The Marriott Hotel and Conference Center, Coralville, Thursday, November 3, 2016 - 8:00 am to Friday, November 4, 2016 - 1:00 pm</a></li>
-								<li>11/3: Using surveys in data collection, Room 324, Rod Library, Thursday, November 3, 2016 - 12:15 pm</li>
-								<li>11/3: International Coffee Hour, Room 113, Maucker Union, Thursday, November 3, 2016 - 3:00 pm</li>
-								<li><a href="https://uni.edu/chemistry/seminar-schedule"> 11/3: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, November 3, 2016 - 4:00 pm</a></li>
-								<li>11/3: Artists' Lecture: Karen Graffeo and Julio Larramendi, Kamerick Art Building, room 111, Thursday, November 3, 2016 - 6:00 pm</li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/3: TheatreUNI: Twelfth Night, Strayer-Wood, Thursday, November 3, 2016 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 11/3: Observatory Show, Room 137, McCollum Science Hall, Thursday, November 3, 2016 - 9:00 pm to 10:00 pm</a></li>
-								<li>11/4: Bosnian Culture and How to Pronounce Bosnian Names, Room 378, Rod Library, Friday, November 4, 2016 - 12:00 pm</li>
-								<li>11/4: UNI Swimming & Diving vs. South Dakota, Glen F. Henry Swimming & Diving Pool (WRC), Friday, November 4, 2016 - 5:00 pm</li>
-								<li>11/4: First Friday, Coffeehouse, Maucker Union, Friday, November 4, 2016 - 5:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/4: UNI Cantorei, Great Reading Room, Seerley Hall, Friday, November 4, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/4: UNI Jazz Band One, Bengtson Auditorium, Russell Hall, Friday, November 4, 2016 - 7:30 pm</a></li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/4: TheatreUNI: Twelfth Night, Strayer-Wood, Friday, November 4, 2016 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/5: Viola Festival, Davis Hall, GBPAC, Saturday, November 5, 2016 (All day)</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/5: UNI Community Music School Recital Weekend, Russell Hall, Saturday, November 5, 2016 (All day) to Sunday, November 6, 2016 (All day)</a></li>
-								<li><a href="https://docs.google.com/a/uni.edu/forms/d/e/1FAIpQLSeaJJwLGja9Vzrg4J3P5Moc-0k6bvxF0nuVpxkSLdI7TEEXSg/viewform?c=0&w=1"> 11/5: Educating Educators 2016--Multicultural Teaching in Iowa: Becoming Prepared for the Changing Demographics, Center for Energy & Environmental Education, Saturday, November 5, 2016 - 8:00 am</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-707/country-unplugged.aspx"> 11/5: Country Unplugged Featuring: Mark Chesnutt, Lorrie Morgan, and Joe Diffie, Gallagher Bluedorn Performing Arts Center, Saturday, November 5, 2016 - 7:00 pm</a></li>
-								<li>11/5: UNI Volleyball vs. Drake, McLeod Center, Saturday, November 5, 2016 - 7:00 pm</li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/5: TheatreUNI: Twelfth Night, Strayer-Wood, Saturday, November 5, 2016 - 7:30 pm</a></li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/6: TheatreUNI: Twelfth Night, Strayer-Wood, Sunday, November 6, 2016 - 2:00 pm</a></li>
+								<li>11/7: CROW Forum: "Towards an Ethics of Care: Ecofeminism, Taxidermy, and Animal Portraiture in Contemporary Art", Room 287, Rod Library, Monday, November 7, 2016 - 12:00 pm</li>
+								<li>11/7: They Said What?!: Using Principles of Forgiveness to Respond to Offensive Comments, Room 378, Rod Library, Monday, November 7, 2016 - 12:00 pm</li>
+								<li><a href="http://www.grad.uni.edu/">11/7: Resume Writing for Graduate Students Workshop, Presidential Room, Maucker Union, Monday, November 7, 2016 - 12:00 pm to 1:00 pm</a></li>
+								<li>11/7: Camp Adventure Info Session, Presidential Room, Maucker Union, Monday, November 7, 2016 - 5:00 pm to 7:00 pm</li>
+								<li>11/7: Art event/open mic (Free check plus), Monday, November 7, 2016 - 6:30pm</li>
+								<li>11/7: UNI Women's Basketball vs. Maryville, McLeod Center, Monday, November 7, 2016 - 7:00 pm</li>
+								<li>11/7: Our Curse: A Short Film, Room 137, McCollum Science Hall, Monday, November 7, 2016 - 7:00 pm to 8:30 pm</li>
+								<li>11/7: Panther Marching Band Concert, Great Hall, GBPAC, Monday, November 7, 2016 - 7:30 pm</li>
+								<li>11/7: Psychology Club meeting, Room 320, Curris Business Building, Monday, November 7, 2016 - 8:00 pm</li>
+								<li><a href="http://www.uni.edu/pscouncil/fall-social">11/8: P&amp;S 2016 Fall Social, Old Central Ballroom B and C, Maucker Union, Tuesday, November 8, 2016 - 12:00 pm</a></li>
+								<li>11/8: Green Zone Training, Elm Room, Maucker Union, Tuesday, November 8, 2016 - 1:00 pm to 2:30 pm</li>
+								<li>11/8: Teach UNI Presentations: Using Twitter as an Educational Tool, Room 378, Rod Library, Tuesday, November 8, 2016 - 3:30 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/8: UNI Symphonic Band, Great Hall, GBPAC, Tuesday, November 8, 2016 - 7:30 pm</a></li>
+								<li>11/9: Most-of-the-Day Scavenger Hunt, Maucker Union, Veterans Center, Room 111-G, Wednesday, November 9, 2016 - 8:00 am to 4:00 pm</li>
+								<li>11/9: Walk the Labyrinth, Old Central Ballroom C, Maucker Union, Wednesday, November 9, 2016 - 11:00 am to 6:00 pm</li>
+								<li>11/9: Workplace Accommodations Under the ADA, Oak Room, Maucker Union, Wednesday, November 9, 2016 - 3:00 pm</li>
+								<li>11/9: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, November 9, 2016 - 5:00 pm to 8:00 pm</li>
+								<li>11/9: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, November 9, 2016 - 7:00 pm</li>
+								<li>11/10: Thursday lunchtime cribbage, Book Bistro, Rod Library, Thursday, November 10, 2016 - 12:00 pm</li>
+								<li>11/10: International Coffee Hour, Room 113, Maucker Union, Thursday, November 10, 2016 - 3:00 pm</li>
+								<li><a href="https://uni.edu/chemistry/seminar-schedule"> 11/10: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, November 10, 2016 - 4:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/10: UNITUBA Ensembles Concert, Davis Hall, GBPAC, Thursday, November 10, 2016 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/csbs/military-science"> 11/11: ROTC Battalion Run, West Gym, Friday, November 11, 2016 - 6:00 am</a></li>
+								<li>11/11: Biometric Screening, Rooms 007/009, Gilchrist Hall, Friday, November 11, 2016 - 7:00 am</li>
+								<li>11/11: Meet and Greet: Thomas R. Jones, Room 111-G, Maucker Union, Friday, November 11, 2016 - 10:00 am to 2:00 pm</li>
+								<li><a href="http://www.uni.edu/csbs/military-science"> 11/11: Veterans Day Ceremony, West Gym, Friday, November 11, 2016 - 11:55 am</a></li>
+								<li>11/11: UNI Swimming &amp; Diving vs. South Dakota State, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, November 11, 2016 - 3:00 pm</li>
+								<li>11/11: Veterans Day Program, Rod Library, Friday, November 11, 2016 - 3:00 pm to 3:30 pm</li>
+								<li><a href="http://www.uni.edu/military/military-ball"> 11/11: 4th Annual Military Ball, Slife Ballroom, Commons, Friday, November 11, 2016 - 5:30 pm to 8:00 pm</a></li>
+								<li>11/11: UNI Wrestling vs. Nebraska-Kearney, West Gym, Friday, November 11, 2016 - 5:45 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/11: Guest Artist Recital: Daniel Sheridan, clarinet, Davis Hall, GBPAC, Friday, November 11, 2016 - 6:00 pm</a></li>
+								<li>11/11: UNI Volleyball vs. Loyola, McLeod Center, Friday, November 11, 2016 - 7:00 pm</li>
+								<li>11/11: UNI Wrestling vs. Utah Valley, West Gym, Friday, November 11, 2016 - 7:30 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/11: UNI Piano Studio Recital, Davis Hall, GBPAC, Friday, November 11, 2016 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/suzuki/"> 11/12 (ALL DAY): UNI Suzuki School Recital Weekend, Russell Hall, Saturday, November 12, 2016 (All day) to Sunday, November 13, 2016 (All day)</a></li>
+								<li><a href="https://campadventure.formstack.com/forms/ca_interest_card_081815v1"> 11/12: Camp Adventure LAC Interview, Wellness/Recreation Cener, Saturday, November 12, 2016 - 8:30 am</a></li>
+								<li>11/12: UNI Men's Basketball vs. Core, McLeod Center, Saturday, November 12, 2016 - 11:00 am</li>
+								<li>11/12: UNI Volleyball vs. Bradley, McLeod Center, Friday, November 12, 2016 - 7:00 pm</li>
                             </ul>
 						</div>
                     </article>
