--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 4 November 2016</span>
+                                        <span class="data">Last Updated: 8 November 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/11-7-class-recap.html">11/7/16 Today we discussed chaos, how it works in storytelling, and how to use it effectively.</a></li>
 								<li><a href="html_bucket_class_recaps/11-4-class-recap.html">11/4/16 Today I went over how to register for classes, don't worry if you missed it. I'll send an e-mail.</a></li>
 								<li><a href="html_bucket_class_recaps/11-2-class-recap.html">11/2/16 We started by reading some Edgar Allan Poe, then split into small groups and discussed Ishmael.</a></li>
 								<li><a href="html_bucket_class_recaps/10-31-class-recap.html">10/31/16 Happy Halloween! Today we went over the concept of momentum, and how it works within storytelling.</a></li>
