--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/11-11-class-recap.html">11/11/16 We finished talking about chapter 9 of Ishmael and how it's related to Genesis 1-4</a></li>
 								<li><a href="html_bucket_class_recaps/11-9-class-recap.html">11/9/16 Today we broke down chapter 9 of Ishmael within groups. There's a lot going on in chapter 9.</a></li>
 								<li><a href="html_bucket_class_recaps/11-7-class-recap.html">11/7/16 Today we discussed chaos, how it works in storytelling, and how to use it effectively.</a></li>
 								<li><a href="html_bucket_class_recaps/11-4-class-recap.html">11/4/16 Today I went over how to register for classes, don't worry if you missed it. I'll send an e-mail.</a></li>
