--- a/html_bucket_class_recaps/11-14-class-recap.html
+++ b/html_bucket_class_recaps/11-14-class-recap.html
@@ -136,7 +136,7 @@
 							<br>-The fourth quarter of Ishmael up until the end of the book (pg. 211-263)
 							<br><br>and the following from Calvin and Hobbes:
 							<br>-Academia (pg. 175-192)
-							<br>-Bill Waterson (pg. 207)
+							<br>-Bill Watterson (pg. 207)
 							
 							<br><br>If you went to the taste of culture event make sure to write up an engagement to get credit for it! For the rest of the semester 
 							feel free to decide whether you want to turn in audio or written rundowns. It's up to you!
