--- a/html_bucket_class_recaps/11-11-class-recap.html
+++ b/html_bucket_class_recaps/11-11-class-recap.html
@@ -124,7 +124,7 @@
 							This lead directly in to the deconstruction of Genesis 1-4 which we examined in class. Nick talked about each line in Genesis 1-4 and how 
 							it relates to Ishmael. The first portion of genesis is filed with the pillars of story-telling we focus on as a class, including deflection.
 							*Hence the picture from Star Wars. It's deflection. Get it fam?*
-							<br><br>To read up on Genesis refer to <a href="biblegateway.com">bibleGateway</a>
+							<br><br>To read up on Genesis refer to <a href="https://www.biblegateway.com">bibleGateway</a>
 							
 							<br><br>Your homework for Friday is the following!
 							<br>read the following section from Ishmael by Daniel Quinn: 
