--- a/events-page.html
+++ b/events-page.html
@@ -113,47 +113,15 @@
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
 								could go to that would count. So feel free to attend something not on the list!
+								
+								<br><br><b>It's Thanksgiving break this week so there isn't a lot going on!! Enjoy the break guys!</b>
 							 </p>
 							 <ul class="tales-list">
                                 <li>ALL WEEK: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
-								<li>11/7: CROW Forum: "Towards an Ethics of Care: Ecofeminism, Taxidermy, and Animal Portraiture in Contemporary Art", Room 287, Rod Library, Monday, November 7, 2016 - 12:00 pm</li>
-								<li>11/7: They Said What?!: Using Principles of Forgiveness to Respond to Offensive Comments, Room 378, Rod Library, Monday, November 7, 2016 - 12:00 pm</li>
-								<li><a href="http://www.grad.uni.edu/">11/7: Resume Writing for Graduate Students Workshop, Presidential Room, Maucker Union, Monday, November 7, 2016 - 12:00 pm to 1:00 pm</a></li>
-								<li>11/7: Camp Adventure Info Session, Presidential Room, Maucker Union, Monday, November 7, 2016 - 5:00 pm to 7:00 pm</li>
-								<li>11/7: Art event/open mic (Free check plus), Monday, November 7, 2016 - 6:30pm</li>
-								<li>11/7: UNI Women's Basketball vs. Maryville, McLeod Center, Monday, November 7, 2016 - 7:00 pm</li>
-								<li>11/7: Our Curse: A Short Film, Room 137, McCollum Science Hall, Monday, November 7, 2016 - 7:00 pm to 8:30 pm</li>
-								<li>11/7: Panther Marching Band Concert, Great Hall, GBPAC, Monday, November 7, 2016 - 7:30 pm</li>
-								<li>11/7: Psychology Club meeting, Room 320, Curris Business Building, Monday, November 7, 2016 - 8:00 pm</li>
-								<li><a href="http://www.uni.edu/pscouncil/fall-social">11/8: P&amp;S 2016 Fall Social, Old Central Ballroom B and C, Maucker Union, Tuesday, November 8, 2016 - 12:00 pm</a></li>
-								<li>11/8: Green Zone Training, Elm Room, Maucker Union, Tuesday, November 8, 2016 - 1:00 pm to 2:30 pm</li>
-								<li>11/8: Teach UNI Presentations: Using Twitter as an Educational Tool, Room 378, Rod Library, Tuesday, November 8, 2016 - 3:30 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/8: UNI Symphonic Band, Great Hall, GBPAC, Tuesday, November 8, 2016 - 7:30 pm</a></li>
-								<li>11/9: Most-of-the-Day Scavenger Hunt, Maucker Union, Veterans Center, Room 111-G, Wednesday, November 9, 2016 - 8:00 am to 4:00 pm</li>
-								<li>11/9: Walk the Labyrinth, Old Central Ballroom C, Maucker Union, Wednesday, November 9, 2016 - 11:00 am to 6:00 pm</li>
-								<li>11/9: Workplace Accommodations Under the ADA, Oak Room, Maucker Union, Wednesday, November 9, 2016 - 3:00 pm</li>
-								<li>11/9: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, November 9, 2016 - 5:00 pm to 8:00 pm</li>
-								<li>11/9: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, November 9, 2016 - 7:00 pm</li>
-								<li>11/10: Thursday lunchtime cribbage, Book Bistro, Rod Library, Thursday, November 10, 2016 - 12:00 pm</li>
-								<li>11/10: International Coffee Hour, Room 113, Maucker Union, Thursday, November 10, 2016 - 3:00 pm</li>
-								<li><a href="https://uni.edu/chemistry/seminar-schedule"> 11/10: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, November 10, 2016 - 4:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/10: UNITUBA Ensembles Concert, Davis Hall, GBPAC, Thursday, November 10, 2016 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/csbs/military-science"> 11/11: ROTC Battalion Run, West Gym, Friday, November 11, 2016 - 6:00 am</a></li>
-								<li>11/11: Biometric Screening, Rooms 007/009, Gilchrist Hall, Friday, November 11, 2016 - 7:00 am</li>
-								<li>11/11: Meet and Greet: Thomas R. Jones, Room 111-G, Maucker Union, Friday, November 11, 2016 - 10:00 am to 2:00 pm</li>
-								<li><a href="http://www.uni.edu/csbs/military-science"> 11/11: Veterans Day Ceremony, West Gym, Friday, November 11, 2016 - 11:55 am</a></li>
-								<li>11/11: UNI Swimming &amp; Diving vs. South Dakota State, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, November 11, 2016 - 3:00 pm</li>
-								<li>11/11: Veterans Day Program, Rod Library, Friday, November 11, 2016 - 3:00 pm to 3:30 pm</li>
-								<li><a href="http://www.uni.edu/military/military-ball"> 11/11: 4th Annual Military Ball, Slife Ballroom, Commons, Friday, November 11, 2016 - 5:30 pm to 8:00 pm</a></li>
-								<li>11/11: UNI Wrestling vs. Nebraska-Kearney, West Gym, Friday, November 11, 2016 - 5:45 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/11: Guest Artist Recital: Daniel Sheridan, clarinet, Davis Hall, GBPAC, Friday, November 11, 2016 - 6:00 pm</a></li>
-								<li>11/11: UNI Volleyball vs. Loyola, McLeod Center, Friday, November 11, 2016 - 7:00 pm</li>
-								<li>11/11: UNI Wrestling vs. Utah Valley, West Gym, Friday, November 11, 2016 - 7:30 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/11: UNI Piano Studio Recital, Davis Hall, GBPAC, Friday, November 11, 2016 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/suzuki/"> 11/12 (ALL DAY): UNI Suzuki School Recital Weekend, Russell Hall, Saturday, November 12, 2016 (All day) to Sunday, November 13, 2016 (All day)</a></li>
-								<li><a href="https://campadventure.formstack.com/forms/ca_interest_card_081815v1"> 11/12: Camp Adventure LAC Interview, Wellness/Recreation Cener, Saturday, November 12, 2016 - 8:30 am</a></li>
-								<li>11/12: UNI Men's Basketball vs. Core, McLeod Center, Saturday, November 12, 2016 - 11:00 am</li>
-								<li>11/12: UNI Volleyball vs. Bradley, McLeod Center, Friday, November 12, 2016 - 7:00 pm</li>
+								<li>11/24: Missouri Valley Conference Volleyball Tournament, McLeod Center, Thursday, November 24, 2016 - 5:00 pm</li>
+								<li>11/25: Missouri Valley Conference Volleyball Tournament, McLeod Center, Friday, November 25, 2016 - 5:00 pm</li>
+								<li>11/26: Missouri Valley Conference Volleyball Tournament, McLeod Center, Saturday, November 26, 2016 - 4:00 pm</li>
+								<li>11/27: UNI Wrestling vs. Old Dominion, West Gym, Sunday, November 27, 2016 - 2:00 pm</li>
                             </ul>
 						</div>
                     </article>
