--- a/html_bucket_class_recaps/11-16-class-recap.html
+++ b/html_bucket_class_recaps/11-16-class-recap.html
@@ -125,7 +125,7 @@
 							<br><br>First I went over how to register for cornerstone for next semester, as I  got a few questions. If you ever forget refer to the Youtube video below! 
 							It should be relatively simple.
 							
-							<center>Registering for classes:</center></b>
+							<center><b>Registering for classes:</center></b>
 							<div class="auto-resizable-iframe"><div> <iframe frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/yu56P6ZaOHk "></iframe> </div></div>
 							
 							<br><br>After that, I showed everyone how to find when their finals take place. Don't sleep on your finals guys, they'll be here before you know it and being 
