--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 6 November 2016</span>
+                                        <span class="data">Last Updated: 27 November 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,15 +113,32 @@
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
 								could go to that would count. So feel free to attend something not on the list!
-								
-								<br><br><b>It's Thanksgiving break this week so there isn't a lot going on!! Enjoy the break guys!</b>
 							 </p>
 							 <ul class="tales-list">
-                                <li>ALL WEEK: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
-								<li>11/24: Missouri Valley Conference Volleyball Tournament, McLeod Center, Thursday, November 24, 2016 - 5:00 pm</li>
-								<li>11/25: Missouri Valley Conference Volleyball Tournament, McLeod Center, Friday, November 25, 2016 - 5:00 pm</li>
-								<li>11/26: Missouri Valley Conference Volleyball Tournament, McLeod Center, Saturday, November 26, 2016 - 4:00 pm</li>
-								<li>11/27: UNI Wrestling vs. Old Dominion, West Gym, Sunday, November 27, 2016 - 2:00 pm</li>
+                                <li>11/28: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/28: UNI Bassoon Studio Recital, Davis Hall, GBPAC, Monday, November 28, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/29: UNI Clarinet Studio and Clarinet Ensemble Concert, Davis Hall, GBPAC, Tuesday, November 29, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/29: Faculty Artist Recital: Dmitri Vorobiev, piano &ndash; Beethoven Concert #9, Davis Hall, GBPAC, Tuesday, November 29, 2016 - 8:00 pm</a></li>
+								<li>11/30: Chiropractic Presentation: Cold and Flu, Room 007, Gilchrist Hall, Wednesday, November 30, 2016 - 12:00 pm</li>
+								<li>11/30: Camp Adventure PLAC,  Room 112, Human Performance Center, Wednesday, November 30, 2016 - 5:00 pm to 7:00 pm</li>
+								<li>11/30: Camp Adventure Info Session,  Maucker Union (by Chats), Wednesday, November 30, 2016 - 5:00 pm to 8:00 pm</li>
+								<li><a href="http://uni.edu/ethics/current-events"> 11/30: WHAT IF....We Could Create and Abundance Economy, Cedar Falls Public Library, Wednesday, November 30, 2016 - 7:00 pm</a></li>
+								<li>11/30: UNI Men's Basketball vs. George Mason, McLeod Center, Wednesday, November 30, 2016 - 7:00 pm</li>
+								<li>11/30: Diversity Colloquium: A War on Drugs or a War on People?, Room 301, Rod Library, Wednesday, November 30, 2016 - 7:00 pm</li>
+								<li>12/1: International Coffee Hour, Room 113, Maucker Union, Thursday, December 1, 2016 - 3:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 12/1: Faculty and Guest Artist Recital: John Hines, Amy Pfrimmer and Korey Barrett, Davis Hall, GBPAC, Thursday, December 1, 2016 - 6:00 pm</a></li>
+								<li><a href="http://uni.edu/studentlife/cab"> 12/1: Celebrate the Seasons, Maucker Union, Thursday, December 1, 2016 - 7:00 pm</a></li>
+								<li>12/1: UNI Women's Basketball vs. South Dakota State, McLeod Center, Thursday, December 1, 2016 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 12/1: UNI Saxophone Studio Recital, Davis Hall, GBPAC, Thursday, December 1, 2016 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 12/2 ALL DAY: School of Music Audition Day, Russell Hall &amp; GBPAC, Friday, December 2, 2016 (All day)</a></li>
+								<li><a href="https://www.facebook.com/events/1528433353852149/"> 12/2: First Friday, Coffeehouse, Maucker Union, Friday, December 2, 2016 - 5:00 pm to 8:00 pm</a></li>
+								<li>12/2: UNI Varsity Men&#8217;s Glee Club Christmas Variety Show, Great Hall, GBPAC, Friday, December 2, 2016 - 7:30 pm</li>
+								<li><a href="https://campadventure.formstack.com/forms/ca_interest_card_081815v1"> 12/3: Camp Adventure LAC Interview, Wellness/Recreation Center, Saturday, December 3, 2016 - 8:30 am</a></li>
+								<li>12/3: UNI Open, UNI-Dome, Saturday, December 3, 2016 - 9:00 am</li>
+								<li>12/3: UNI Varsity Men&#8217;s Glee Club Christmas Variety Show, Great Hall, GBPAC, Saturday, December 3, 2016 - 2:30 pm</li>
+								<li>12/3: UNI Varsity Men&#8217;s Glee Club Christmas Variety Show, Great Hall, GBPAC, Saturday, December 3, 2016 - 7:30 pm</li>
+								<li>12/4: Movie Premiere: Moving Words, Waterloo Center for the Arts, Sunday, December 4, 2016 - 3:00 pm to 4:30 pm</li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-723/canadian-brass2016.aspx"> 12/4: Canadian Brass, Gallagher Bluedorn Performing Arts Center, Sunday, December 4, 2016 - 4:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
