--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/12-2-class-recap.html">12/2/16 We started creating our own stories within groups using the pillars we've learned so far.</a></li>
 								<li><a href="html_bucket_class_recaps/11-30-class-recap.html">11/30/16 We finished talking about the pillars and watched some shark tank to see how they work in action.</a></li>
 								<li><a href="html_bucket_class_recaps/11-28-class-recap.html">11/28/16 We discussed all the pillars we've covered so far in groups. This will help with your speeches next semester.</a></li>
 								<li><a href="html_bucket_class_recaps/11-16-class-recap.html">11/16/16 I lead the class today and everyone was amazed at how much they learned!</a></li>
