events page updated for week of 12/5

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 27 November 2016</span>
+                                        <span class="data">Last Updated: 4 December 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -115,30 +115,23 @@
 								could go to that would count. So feel free to attend something not on the list!
 							 </p>
 							 <ul class="tales-list">
-                                <li>11/28: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 11/28: UNI Bassoon Studio Recital, Davis Hall, GBPAC, Monday, November 28, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/29: UNI Clarinet Studio and Clarinet Ensemble Concert, Davis Hall, GBPAC, Tuesday, November 29, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 11/29: Faculty Artist Recital: Dmitri Vorobiev, piano &ndash; Beethoven Concert #9, Davis Hall, GBPAC, Tuesday, November 29, 2016 - 8:00 pm</a></li>
-								<li>11/30: Chiropractic Presentation: Cold and Flu, Room 007, Gilchrist Hall, Wednesday, November 30, 2016 - 12:00 pm</li>
-								<li>11/30: Camp Adventure PLAC,  Room 112, Human Performance Center, Wednesday, November 30, 2016 - 5:00 pm to 7:00 pm</li>
-								<li>11/30: Camp Adventure Info Session,  Maucker Union (by Chats), Wednesday, November 30, 2016 - 5:00 pm to 8:00 pm</li>
-								<li><a href="http://uni.edu/ethics/current-events"> 11/30: WHAT IF....We Could Create and Abundance Economy, Cedar Falls Public Library, Wednesday, November 30, 2016 - 7:00 pm</a></li>
-								<li>11/30: UNI Men's Basketball vs. George Mason, McLeod Center, Wednesday, November 30, 2016 - 7:00 pm</li>
-								<li>11/30: Diversity Colloquium: A War on Drugs or a War on People?, Room 301, Rod Library, Wednesday, November 30, 2016 - 7:00 pm</li>
-								<li>12/1: International Coffee Hour, Room 113, Maucker Union, Thursday, December 1, 2016 - 3:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 12/1: Faculty and Guest Artist Recital: John Hines, Amy Pfrimmer and Korey Barrett, Davis Hall, GBPAC, Thursday, December 1, 2016 - 6:00 pm</a></li>
-								<li><a href="http://uni.edu/studentlife/cab"> 12/1: Celebrate the Seasons, Maucker Union, Thursday, December 1, 2016 - 7:00 pm</a></li>
-								<li>12/1: UNI Women's Basketball vs. South Dakota State, McLeod Center, Thursday, December 1, 2016 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 12/1: UNI Saxophone Studio Recital, Davis Hall, GBPAC, Thursday, December 1, 2016 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 12/2 ALL DAY: School of Music Audition Day, Russell Hall &amp; GBPAC, Friday, December 2, 2016 (All day)</a></li>
-								<li><a href="https://www.facebook.com/events/1528433353852149/"> 12/2: First Friday, Coffeehouse, Maucker Union, Friday, December 2, 2016 - 5:00 pm to 8:00 pm</a></li>
-								<li>12/2: UNI Varsity Men&#8217;s Glee Club Christmas Variety Show, Great Hall, GBPAC, Friday, December 2, 2016 - 7:30 pm</li>
-								<li><a href="https://campadventure.formstack.com/forms/ca_interest_card_081815v1"> 12/3: Camp Adventure LAC Interview, Wellness/Recreation Center, Saturday, December 3, 2016 - 8:30 am</a></li>
-								<li>12/3: UNI Open, UNI-Dome, Saturday, December 3, 2016 - 9:00 am</li>
-								<li>12/3: UNI Varsity Men&#8217;s Glee Club Christmas Variety Show, Great Hall, GBPAC, Saturday, December 3, 2016 - 2:30 pm</li>
-								<li>12/3: UNI Varsity Men&#8217;s Glee Club Christmas Variety Show, Great Hall, GBPAC, Saturday, December 3, 2016 - 7:30 pm</li>
-								<li>12/4: Movie Premiere: Moving Words, Waterloo Center for the Arts, Sunday, December 4, 2016 - 3:00 pm to 4:30 pm</li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-723/canadian-brass2016.aspx"> 12/4: Canadian Brass, Gallagher Bluedorn Performing Arts Center, Sunday, December 4, 2016 - 4:00 pm</a></li>
+								<li>12/5: CROW Forum: "Trans-ing the Gothic: How Trans Plots, Genres, and Characters Trouble the Gothic Novel", Room 287, Rod Library, Monday, December 5, 2016 - 12:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 12/5: UNI Percussion Department Concert, Davis Hall, GBPAC, Monday, December 5, 2016 - 8:00 pm</a></li>
+								<li><a href="https://www.facebook.com/UNIpsychclub/"> 12/5: Psychology Club meeting, Room 320, Curris Business Building, Monday, December 5, 2016 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 12/6: Spotlight Series Concert: UNI Choirs Holiday Concert, Great Hall, GBPAC, Tuesday, December 6, 2016 - 7:30 pm</a></li>
+								<li>12/7: Wheaton Wellness Session: Heart Disease Awareness, Room 009, Gilchrist Hall, Wednesday, December 7, 2016 - 12:00 pm</li>
+								<li><a href="https://www.library.uni.edu/events/2016-12/antique-word-games-night"> 12/7: Antique word games, 3rd floor, Rod Library, Wednesday, December 7, 2016 - 3:00 pm to 5:00 pm</a></li>
+								<li>12/7: Camp Adventure Info Session,  Maucker Union (by Chats), Wednesday, December 7, 2016 - 5:00 pm to 8:00 pm</li>
+								<li>12/7: UNI Men's Basketball vs. South Dakota State, McLeod Center, Wednesday, December 7, 2016 - 7:00 pm</li>
+								<li>12/8: International Coffee Hour, Room 113, Maucker Union, Thursday, December 8, 2016 - 3:00 pm</li>
+								<li>12/8: Movie Premiere: Moving Words, Rod Library Scholar Space, Thursday, December 8, 2016 - 3:30 pm to 5:00 pm</li>
+								<li><a href="https://www.uni.edu/art/gallery.html"> 12/8: "B.F.A. Group Exhibition", UNI Gallery of Art, Thursday, December 8, 2016 - 7:00 pm to Saturday, December 17, 2016 - 5:00 pm</a></li>
+								<li><a href="https://www.uni.edu/art/gallery.html"> 12/8: "Illuminating Manuscripts", UNI Gallery of Art, Thursday, December 8, 2016 - 7:00 pm to Saturday, December 17, 2016 - 5:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 12/9: UNI Children’s Choir Concert, Bengtson Auditorium, Russell Hall, Friday, December 9, 2016 - 7:00 pm</a></li>
+								<li>12/10: UNI Women's Basketball vs. Creighton, McLeod Center, Saturday, December 10, 2016 - 2:00 pm</li>
+								<li>12/10: UNI Men's Basketball vs. North Dakota, McLeod Center, Saturday, December 10, 2016 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/suzuki/"> 12/11: Cedar Falls Community Orchestra with Northern Iowa Youth Orchestra, Bengtson Auditorium, Russell Hall, Sunday, December 11, 2016 - 2:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-711/sandi-patty.aspx"> 12/11: Sandi Patty, Gallagher Bluedorn Performing Arts Center, Sunday, December 11, 2016 - 3:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
