--- a/events-page.html
+++ b/events-page.html
@@ -127,7 +127,7 @@
 								<li>12/8: Movie Premiere: Moving Words, Rod Library Scholar Space, Thursday, December 8, 2016 - 3:30 pm to 5:00 pm</li>
 								<li><a href="https://www.uni.edu/art/gallery.html"> 12/8: "B.F.A. Group Exhibition", UNI Gallery of Art, Thursday, December 8, 2016 - 7:00 pm to Saturday, December 17, 2016 - 5:00 pm</a></li>
 								<li><a href="https://www.uni.edu/art/gallery.html"> 12/8: "Illuminating Manuscripts", UNI Gallery of Art, Thursday, December 8, 2016 - 7:00 pm to Saturday, December 17, 2016 - 5:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 12/9: UNI Children’s Choir Concert, Bengtson Auditorium, Russell Hall, Friday, December 9, 2016 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 12/9: UNI Children's Choir Concert, Bengtson Auditorium, Russell Hall, Friday, December 9, 2016 - 7:00 pm</a></li>
 								<li>12/10: UNI Women's Basketball vs. Creighton, McLeod Center, Saturday, December 10, 2016 - 2:00 pm</li>
 								<li>12/10: UNI Men's Basketball vs. North Dakota, McLeod Center, Saturday, December 10, 2016 - 7:00 pm</li>
 								<li><a href="http://www.uni.edu/music/suzuki/"> 12/11: Cedar Falls Community Orchestra with Northern Iowa Youth Orchestra, Bengtson Auditorium, Russell Hall, Sunday, December 11, 2016 - 2:00 pm</a></li>
