--- a/recaps-page.html
+++ b/recaps-page.html
@@ -109,8 +109,8 @@
 						
 						<div class="body">
 							 <p>
-								This page contains links to all our class recaps, and will be updated every class. Alternatatively you can find the newest ones linked on the home page. 
-								If you ever need to sort specifically by class recaps, you know where to go. 
+								This page contains links to all our class recaps and will be updated every class. Alternatively, you can find the newest ones linked on the home page. 
+								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
 								<li><a href="html_bucket_class_recaps/12-5-class-recap.html">12/5/16 You guys shared your group stories, we learned some Mandarin, and we have started our pop speeches.</a></li>
