--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 5 December 2016</span>
+                                        <span class="data">Last Updated: 7 December 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/12-7-class-recap.html">12/7/16 We continued on with our pop speeches. Next class should be super short. You're almost done!</a></li>
 								<li><a href="html_bucket_class_recaps/12-5-class-recap.html">12/5/16 You guys shared your group stories, we learned some Mandarin, and we have started our pop speeches.</a></li>
 								<li><a href="html_bucket_class_recaps/12-2-class-recap.html">12/2/16 We started creating our own stories within groups using the pillars we've learned so far.</a></li>
 								<li><a href="html_bucket_class_recaps/11-30-class-recap.html">11/30/16 We finished talking about the pillars and watched some shark tank to see how they work in action.</a></li>
