updated events page

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 4 December 2016</span>
+                                        <span class="data">Last Updated: 21 December 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,25 +113,10 @@
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
 								could go to that would count. So feel free to attend something not on the list!
+								
+								<br><b>This page will not be updated during the break. It will be back up and running on Sunday, January 8th! Enjoy your time off!</b>
 							 </p>
 							 <ul class="tales-list">
-								<li>12/5: CROW Forum: "Trans-ing the Gothic: How Trans Plots, Genres, and Characters Trouble the Gothic Novel", Room 287, Rod Library, Monday, December 5, 2016 - 12:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 12/5: UNI Percussion Department Concert, Davis Hall, GBPAC, Monday, December 5, 2016 - 8:00 pm</a></li>
-								<li><a href="https://www.facebook.com/UNIpsychclub/"> 12/5: Psychology Club meeting, Room 320, Curris Business Building, Monday, December 5, 2016 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 12/6: Spotlight Series Concert: UNI Choirs Holiday Concert, Great Hall, GBPAC, Tuesday, December 6, 2016 - 7:30 pm</a></li>
-								<li>12/7: Wheaton Wellness Session: Heart Disease Awareness, Room 009, Gilchrist Hall, Wednesday, December 7, 2016 - 12:00 pm</li>
-								<li><a href="https://www.library.uni.edu/events/2016-12/antique-word-games-night"> 12/7: Antique word games, 3rd floor, Rod Library, Wednesday, December 7, 2016 - 3:00 pm to 5:00 pm</a></li>
-								<li>12/7: Camp Adventure Info Session,  Maucker Union (by Chats), Wednesday, December 7, 2016 - 5:00 pm to 8:00 pm</li>
-								<li>12/7: UNI Men's Basketball vs. South Dakota State, McLeod Center, Wednesday, December 7, 2016 - 7:00 pm</li>
-								<li>12/8: International Coffee Hour, Room 113, Maucker Union, Thursday, December 8, 2016 - 3:00 pm</li>
-								<li>12/8: Movie Premiere: Moving Words, Rod Library Scholar Space, Thursday, December 8, 2016 - 3:30 pm to 5:00 pm</li>
-								<li><a href="https://www.uni.edu/art/gallery.html"> 12/8: "B.F.A. Group Exhibition", UNI Gallery of Art, Thursday, December 8, 2016 - 7:00 pm to Saturday, December 17, 2016 - 5:00 pm</a></li>
-								<li><a href="https://www.uni.edu/art/gallery.html"> 12/8: "Illuminating Manuscripts", UNI Gallery of Art, Thursday, December 8, 2016 - 7:00 pm to Saturday, December 17, 2016 - 5:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 12/9: UNI Children's Choir Concert, Bengtson Auditorium, Russell Hall, Friday, December 9, 2016 - 7:00 pm</a></li>
-								<li>12/10: UNI Women's Basketball vs. Creighton, McLeod Center, Saturday, December 10, 2016 - 2:00 pm</li>
-								<li>12/10: UNI Men's Basketball vs. North Dakota, McLeod Center, Saturday, December 10, 2016 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/suzuki/"> 12/11: Cedar Falls Community Orchestra with Northern Iowa Youth Orchestra, Bengtson Auditorium, Russell Hall, Sunday, December 11, 2016 - 2:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-711/sandi-patty.aspx"> 12/11: Sandi Patty, Gallagher Bluedorn Performing Arts Center, Sunday, December 11, 2016 - 3:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
