--- a/html_bucket_other_posts/happy-holidays-dweebs.html
+++ b/html_bucket_other_posts/happy-holidays-dweebs.html
@@ -121,7 +121,7 @@
 						<div class="body">
                             <p>
 							Hello all! Have a good break, enjoy your time off, and I'll see you when you get back!
-							<br><br>A few things to adress: 
+							<br><br>A few things to address: 
 							<br><b>1.)</b> You don't need to purchase any more books for second semester. You're good to go
 							<br><b>2.)</b> I'll be making a scholarship application walkthrough video over break and sending it out. We'll talk about it when you get back (It's important).
 							<br><b>3.)</b> Your grades for first semester are in the books! Go check out myUniverse to see how well you did.
