--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 21 December 2016</span>
+                                        <span class="data">Last Updated: 8 January 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,10 +113,21 @@
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
 								could go to that would count. So feel free to attend something not on the list!
-								
-								<br><b>This page will not be updated during the break. It will be back up and running on Sunday, January 8th! Enjoy your time off!</b>
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
+								<li>1/10: "Teaser Trailer" Readings: The American Fiction Collection, Rod Library, Special Collections and University Archives (3rd floor), Tuesday, January 10, 2017 - 12:15 pm to 12:45 pm</li>
+								<li>1/10: Auditions for "Boys Will Be Boys", UNI Interpreter's Theater (Lang Hall 040), Tuesday, January 10, 2017 - 7:00 pm</li>
+								<li>1/11: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, January 11, 2017 - 5:00 pm</li>
+								<li><a href="https://unialum.org/events/webinar-discover-yourself">1/11: Webinar: Discover Yourself, Web (It's online),Wednesday, January 11, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>1/12: Auditions for "Boys Will Be Boys", UNI Interpreter's Theater (Lang Hall 040), Thursday, January 12, 2017 - 7:00 pm</li>
+								<li>1/13: Seventeen Foods to Incorporate in Your New Year's Resolutions, Rooms 007/009, Gilchrist Hall, Friday, January 13, 2017 - 3:00 pm</li>
+								<li>1/13: UNI Swimming &amp; Diving vs. Iowa Central, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, January 13, 2017 - 5:00 pm</li>
+								<li>1/13: UNI Swimming &amp; Diving vs. Loras, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, January 13, 2017 - 5:00 pm</li>
+								<li><a href="http://www.unidancemarathon.com/kosama">1/14: Kosama Fitness Event, Kosama Fitness, Saturday, January 14, 2017 - 8:00 am to 10:00 am</a></li>
+								<li><a href="http://www.uni.edu/music/events">1/14: Music Education Workshop, Davis Hall, GBPAC, Saturday, January 14, 2017 - 9:00 am</a></li>
+								<li>1/15: UNI Men's Basketball vs. Drake, McLeod Center, Sunday, January 15, 2017 - 3:00 pm</li>
                             </ul>
 						</div>
                     </article>
