--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 9 January 2016</span>
+                                        <span class="data">Last Updated: 11 January 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/1-11-class-recap.html">1/11/17 Nick read a story about death and we discussed how to find research articles and annotate them properly.</a></li>
 								<li><a href="html_bucket_class_recaps/1-9-class-recap.html">1/9/17 We discussed postmodernism and finally talked more about the group projects you'll be doing this semester.</a></li>
 								<li><a href="html_bucket_class_recaps/12-7-class-recap.html">12/7/16 We continued on with our pop speeches. Next class should be super short. You're almost done!</a></li>
 								<li><a href="html_bucket_class_recaps/12-5-class-recap.html">12/5/16 You guys shared your group stories, we learned some Mandarin, and we have started our pop speeches.</a></li>
