--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 8 January 2016</span>
+                                        <span class="data">Last Updated: 16 January 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,17 +117,21 @@
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li>1/10: "Teaser Trailer" Readings: The American Fiction Collection, Rod Library, Special Collections and University Archives (3rd floor), Tuesday, January 10, 2017 - 12:15 pm to 12:45 pm</li>
-								<li>1/10: Auditions for "Boys Will Be Boys", UNI Interpreter's Theater (Lang Hall 040), Tuesday, January 10, 2017 - 7:00 pm</li>
-								<li>1/11: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, January 11, 2017 - 5:00 pm</li>
-								<li><a href="https://unialum.org/events/webinar-discover-yourself">1/11: Webinar: Discover Yourself, Web (It's online),Wednesday, January 11, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>1/12: Auditions for "Boys Will Be Boys", UNI Interpreter's Theater (Lang Hall 040), Thursday, January 12, 2017 - 7:00 pm</li>
-								<li>1/13: Seventeen Foods to Incorporate in Your New Year's Resolutions, Rooms 007/009, Gilchrist Hall, Friday, January 13, 2017 - 3:00 pm</li>
-								<li>1/13: UNI Swimming &amp; Diving vs. Iowa Central, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, January 13, 2017 - 5:00 pm</li>
-								<li>1/13: UNI Swimming &amp; Diving vs. Loras, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, January 13, 2017 - 5:00 pm</li>
-								<li><a href="http://www.unidancemarathon.com/kosama">1/14: Kosama Fitness Event, Kosama Fitness, Saturday, January 14, 2017 - 8:00 am to 10:00 am</a></li>
-								<li><a href="http://www.uni.edu/music/events">1/14: Music Education Workshop, Davis Hall, GBPAC, Saturday, January 14, 2017 - 9:00 am</a></li>
-								<li>1/15: UNI Men's Basketball vs. Drake, McLeod Center, Sunday, January 15, 2017 - 3:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">1/17: Faculty Recital: Randy Grabowski, trumpet, Bengtson Auditorium, Russell Hall, Tuesday, January 17, 2017 - 7:30 pm</a></li>
+								<li>1/18: Wheaton Wellness Session: Technology and Wellness, Room 009, Gilchrist Hall, Wednesday, January 18, 2017 - 12:00 pm</li>
+								<li>1/18: Camp Adventure PLAC, Room 112, Human Performance Center, Wednesday, January 18, 2017 - 5:00 pm to 8:00 pm</li>
+								<li><a href="http://www.uni.edu/art/gallery.html">1/18: Artist Lecture: Allyson Comstock, KAB 111, Wednesday, January 18, 2017 - 6:00 pm</a></li>
+								<li>1/18: UNI Men's Basketball vs. Loyola, McLeod Center, Wednesday, January 18, 2017 - 7:00 pm</li>
+								<li>1/18: Sorority Bingo Night, Old Central Ballroom, Maucker Union, Wednesday, January 18, 2017 - 7:30 pm</li>
+								<li><a href="https://www.library.uni.edu/events/2017-01/jjeffrey-messerole-concert">1/19: J.Jeffrey Messerole Concert, UNI Museum, first floor, Rod Library, Thursday, January 19, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/19: Planetarium Show, Room 105, Latham Hall, Thursday, January 19, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/19: Planetarium Show, Room 105, Latham Hall, Thursday, January 19, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li>1/20: UNI Swimming &amp; Diving vs. Illinois State, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, January 20, 2017 - 5:00 pm</li>
+								<li>1/20: UNI Women's Basketball vs. Indiana State, McLeod Center, Friday, January 20, 2017 - 7:00 pm</li>
+								<li><a href="https://uni.edu/uncommon-sense/">1/21: Uncommon Sense, Gallagher Bluedorn Performing Arts Center, Saturday, January 21, 2017 - 7:00 pm</a></li>
+								<li><a href="https://uni.edu/uncommon-sense/">1/22: Uncommon Sense, Gallagher Bluedorn Performing Arts Center, Sunday, January 22, 2017 - 2:00 pm</a></li>
+								<li>1/22: UNI Women's Basketball vs. Loyola, McLeod Center, Sunday, January 22, 2017 - 2:00 pm</li>
+								<li>1/22: UNI Wrestling vs. Eastern Michigan, West Gym, Sunday, January 22, 2017 - 2:00 pm</li>
                             </ul>
 						</div>
                     </article>
