--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/1-20-class-recap.html">1/20/17 We toured rod library. It was super informative!</a></li>
 								<li><a href="html_bucket_class_recaps/1-18-class-recap.html">1/18/17 We finished sharing research articles and discussed what to look for when evaluating research sources.</a></li>
 								<li><a href="html_bucket_class_recaps/1-13-class-recap.html">1/16/17 We went over google scholar and each person shared their first research article with the class.</a></li>
 								<li><a href="html_bucket_class_recaps/1-11-class-recap.html">1/11/17 Nick read a story about death and we discussed how to find research articles and annotate them properly.</a></li>
